# rudit

./: Cargo.toml  README.md
src/: buffer.rs  color.rs  config.rs  editor.rs  lib.rs  main.rs  pos.rs  rudit.toml
