[package]
name = "rudit"
description = "A simple rust editor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["cargo"] }
crossterm = "0.28.1"
itertools = "0.14.0"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.20"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.3"
